--- a/security/crossplatform/cryptoFramework/.arkui-x/android/app/src/main/res/values/strings.xml
+++ b/security/crossplatform/cryptoFramework/.arkui-x/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">cryptoframeworktest</string>
+    <string name="app_name">cryptoFramework</string>
 </resources>
